--- a/client/src/app/modules/shared/components/pagination/pagination.component.scss
+++ b/client/src/app/modules/shared/components/pagination/pagination.component.scss
@@ -3,11 +3,15 @@
   "../../../../../styles/abstracts/functions";
 
 .pagination-wrapper {
+  button {
+    display: inline-block;
+    background-color: none;
+  }
   ul {
     @include box-size($max-width: 100%, $height: 3rem);
     box-shadow: 0px 20px 9px -17px rgba(16, 16, 16, 0.79);
     li {
-      background-color: rgba(29, 28, 28, 0.774);
+      background-color: lighten($graphite, 10%);
       &:first-of-type {
         border-right: 1px solid darken($midTone, 10%);
         border-radius: 40% 0px 0px 40%;
@@ -17,7 +21,7 @@
         border-radius: 0px 40% 40% 0px;
       }
     }
-    a,
+    button,
     .more-pages-indicator {
       @include alignment($display: flex, $align: center);
       @include box-size($height: 100%);
@@ -38,9 +42,14 @@
         pointer-events: none;
       }
     }
-    a:first-of-type,
-    a:last-of-type {
+    button:first-of-type,
+    button:last-of-type {
       padding: 0.7rem 1rem;
+    }
+
+    button {
+      background-color: inherit;
+      border-radius: inherit;
     }
   }
   .pagination-arrow {
@@ -50,7 +59,7 @@
 @media (min-width: 576px) {
   .pagination-wrapper {
     ul {
-      a,
+      button,
       .more-pages-indicator {
         padding: 0.8rem;
         @include fonts($size: 1rem);
