--- a/client/src/app/modules/shared/components/recipe-form/recipe-form.component.scss
+++ b/client/src/app/modules/shared/components/recipe-form/recipe-form.component.scss
@@ -121,11 +121,22 @@ form {
   // upload
   .photo-upload {
     .images {
-      @include alignment($justify: center, $align: flex-start);
+      @include alignment($justify: center, $align: center, $direction: column);
       figure {
         @include alignment($direction: column);
-        img {
-          @include box-size($max-width: 100%, $height: 100px);
+        height: 140px;
+
+        &.half-size {
+          width: 50%;
+          margin-bottom: 1.2rem;
+
+            figcaption {
+              height: 20%;
+            }
+
+            img {
+              height: 80%;
+            }
         }
         figcaption {
           @include fonts($size: 0.8rem);
@@ -178,14 +189,10 @@ form {
         @include box-size($max-width: initial);
       }
       .images {
-        @include alignment($justify: space-evenly);
+        @include alignment($justify: space-evenly, $direction: row);
         figure {
-          img {
-            @include box-size($height: 200px);
-          }
-          figcaption {
-            @include fonts($size: 0.9rem);
-          }
+          height: 200px;
+          margin-bottom: 0;
         }
       }
     }
