--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -205,7 +205,7 @@ small {
 .disable-scrolling {
   overflow: hidden;
   position: absolute;
-  @include box-size($height: 100vh);
+  @include box-size($min-height: 100vh, $width: 100%);
 }
 
 // tooltip visibility
