--- a/client/src/app/modules/admin/users/users.component.html
+++ b/client/src/app/modules/admin/users/users.component.html
@@ -2,7 +2,7 @@
   <app-overlay
     *ngIf="uiService.editState"
     (closeModal)="closeUserEdit()"
-    [editAdmin]="editAdmin"
+    [editModal]="editModal"
   >
     <ng-container>
       <header class="flex flex-center">
@@ -14,31 +14,31 @@
       </header>
       <div class="editing flex flex-center" *ngIf="editAdmin">
         <h3 class="slim">
-          Admin permissions for <!-- {{ userForEdit.username }} --> are
-          <!-- <strong *ngIf="userForEdit.isAdmin">enabled</strong
-          ><strong *ngIf="!userForEdit.isAdmin">disabled</strong> -->
+          Admin permissions for  {{ userForEdit.username }}  are
+           <strong *ngIf="userForEdit.isAdmin">enabled</strong
+          ><strong *ngIf="!userForEdit.isAdmin">disabled</strong> 
         </h3>
         <div class="admin-user-check-box">
           <label for="adminCheck" class="flex flex-center">
-            <!-- <input
+             <input
               type="checkbox"
               id="adminCheck"
               name="adminCheck"
               value="Enable Admin"
               [checked]="userForEdit.isAdmin"
-              (change)="(e) => (userForEdit.isAdmin = e.target.checked)"
-            /> -->
+              (change)="onChangeAdmin($event)"
+            /> 
             <p class="flex flex-center">
-              <!-- <fa-icon
+               <fa-icon
                 [icon]="['fas', 'user-shield']"
                 [ngClass]="
                   userForEdit.isAdmin ? 'user user-svg' : 'inactive user-svg'
                 "
-              ></fa-icon> -->
+              ></fa-icon> 
             </p>
-            <!-- <span
+             <span
               [ngClass]="userForEdit.isAdmin ? 'right-position' : ''"
-            ></span> -->
+            ></span> 
           </label>
         </div>
         <button (click)="changeAdminStatus()" class="btn-action">
@@ -47,33 +47,33 @@
       </div>
       <div class="editing flex flex-center" *ngIf="!editAdmin">
         <h3 class="slim">
-          User <!-- {{ userForEdit.username }} --> is
-          <!-- <strong *ngIf="userForEdit.isDisabled">disabled</strong
-          ><strong *ngIf="!userForEdit.isDisabled">active</strong> -->
+          User  {{ userForEdit.username }}  is
+           <strong *ngIf="userForEdit.isDisabled">disabled</strong
+          ><strong *ngIf="!userForEdit.isDisabled">active</strong> 
         </h3>
         <div class="admin-user-check-box">
           <label for="disableCheck" class="flex flex-center">
-            <!-- <input
+             <input
               type="checkbox"
               id="disableCheck"
               name="disableCheck"
               value="Change user status"
               [checked]="userForEdit.isDisabled"
-              (change)="(e) => (userForEdit.isDisabled = e.target.checked)"
-            /> -->
+              (change)="onChangeUserStatus($event)"
+            /> 
             <p class="flex flex-center">
-              <!-- <fa-icon
+               <fa-icon
                 [icon]="['fas', 'user']"
                 [ngClass]="[
                   userForEdit.isDisabled
                     ? 'inactive user-svg'
                     : 'user user-svg'
                 ]"
-              ></fa-icon> -->
+              ></fa-icon> 
             </p>
-            <!-- <span
+             <span
               [ngClass]="[!userForEdit.isDisabled ? 'right-position' : '']"
-            ></span> -->
+            ></span> 
           </label>
         </div>
         <button (click)="changeDisableStatus()" class="btn-action">
@@ -99,6 +99,7 @@
             name="selectedOption"
             class="admin-user-search"
             [(ngModel)]="selectedOption"
+            (change)="onChangeSelect($event)"
           >
             <option
               *ngFor="let option of usersOptions"
@@ -108,10 +109,10 @@
             </option>
           </select>
         </div>
-        <input type="text" [(ngModel)]="searchValue" placeholder="Search..." />
+        <input type="text" [(ngModel)]="searchValue" placeholder="Search..." (input)="filterUsers()"/>
       </header>
       <div class="users-list-wrapper flex">
-        <div class="single-user mgb1 grid" *ngFor="let user of users">
+        <div class="single-user mgb1 grid" *ngFor="let user of filteredUsers">
           <figure>
             <ng-container *ngIf="user.user_image">
               <img
@@ -172,7 +173,7 @@
           </div>
           <div class="buttons-user flex">
             <button
-              (click)="openUserEdit(user.userId)"
+              (click)="openUserEdit(user.userId, false)"
               class="tooltip-container"
             >
               <ng-container *ngIf="user.isDisabled">
@@ -192,7 +193,7 @@
               ></app-tooltip>
             </button>
             <button
-              (click)="adminEditing(user.userId)"
+              (click)="openUserEdit(user.userId, true)"
               class="tooltip-container"
             >
               <fa-icon [icon]="['fas', 'user-shield']" class="edit"></fa-icon>
