--- a/client/src/app/modules/shared/components/private-recipe/private-recipe.component.scss
+++ b/client/src/app/modules/shared/components/private-recipe/private-recipe.component.scss
@@ -47,6 +47,9 @@
   .edit-delete {
     grid-area: editDelete;
     @include alignment($justify: space-around);
+    .user-info {
+      color: $golden;
+    }
     button {
       background-color: transparent;
       padding: 0.8rem;
